--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -24,12 +23,14 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build Docker image
         run: |
           docker build -t ronirola/gauge-service-test:latest .
+
+      - name: Push Docker image
+        run: |
           docker push ronirola/gauge-service-test:latest
 
       - name: Run tests
         run: |
-          docker run ronirola/gauge-service-test:latest mvn gauge:execute -DspecsDir=specs
-          
+          docker run --rm ronirola/gauge-service-test:latest
