--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -23,14 +24,12 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
+      - name: Build and push Docker image
         run: |
           docker build -t ronirola/gauge-service-test:latest .
-
-      - name: Push Docker image
-        run: |
           docker push ronirola/gauge-service-test:latest
 
       - name: Run tests
         run: |
-          docker run --rm ronirola/gauge-service-test:latest
+          docker run ronirola/gauge-service-test:latest mvn gauge:execute -DspecsDir=specs
+          
