--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ronirola/gauge-service-test:latest .
+          docker buildx create --use
+          docker buildx build --platform linux/arm64 -t ronirola/gauge-service-test:latest .
           docker push ronirola/gauge-service-test:latest
 
       - name: Run tests
